# control-room

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_PLAN.md  README.md  STATUS.md  com.claus.master-agent.plist  config.yaml  pyproject.toml
.github/workflows/: ci.yml
backlog/: TASK-001.yaml  TASK-002.yaml  TASK-003.yaml  TASK-004.yaml  TASK-005.yaml  TASK-006.yaml
docs/adr/: ADR-001-fastapi-htmx-no-database.md  ADR-002-local-first-architecture.md
src/control_room/: __main__.py  app.py  config.py
src/control_room/collectors/: aggregator.py  cost.py  git_log.py  github.py  governance.py  heartbeat.py  queue.py  status_md.py  task_engine.py  yaml_tasks.py
src/control_room/master/: __main__.py  daemon.py  handover.py  launcher.py  notifier.py  reviewer.py  task_parser.py
src/control_room/models/: __init__.py  activity.py  cost.py  governance.py  heartbeat.py  metrics.py  orchestration.py  project.py  queue.py  task.py
src/control_room/routes/: costs.py  dashboard.py  fleet.py  metrics.py  orchestration.py  projects.py  queue.py  tasks.py
tests/: conftest.py  test_config.py
tests/test_collectors/: test_aggregator.py  test_cost.py  test_git_log.py  test_github.py  test_governance.py  test_heartbeat.py  test_queue.py  test_status_md.py  test_task_engine.py  test_yaml_tasks.py
tests/test_master/: test_daemon.py  test_handover.py  test_launcher.py  test_notifier.py  test_reviewer.py  test_task_parser.py
tests/test_routes/: test_costs.py  test_dashboard.py  test_fleet.py  test_orchestration.py  test_queue.py
(+18 files in other folders)
