[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "control-room"
version = "0.1.0"
description = "Control room dashboard for solo developers managing multiple GitHub repos and AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "jinja2>=3.1",
    "httpx>=0.25",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.1",
]

[project.scripts]
control-room = "control_room.__main__:main"
master-agent = "control_room.master.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/control_room"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
